Handle deprecated Gradle task declarations